Rewritten stylesheet entirely
FQDB 3.0 is here!

--- a/footer.html
+++ b/footer.html
@@ -1,12 +1,5 @@
 <footer>
-<script>
-$(document).ready(function(){
-	$("#hidden_menu").click(function(){
-    $("#hidden_nav").toggle();
-	});
-});
-</script>
-	<span class="left_footer"><a href="http://creativecommons.org/licenses/by-nc-nd/4.0/legalcode" style="font-size: 0.8em">CC BY-NC-ND</a> <a id="hidden_menu" href="#" style="cursor: default">FQDB</a> 2014-2015 - hosted by <a href="https://github.com/pages">Github Pages</a></span>
+	<span class="left_footer"><a href="http://creativecommons.org/licenses/by-nc-nd/4.0/legalcode" style="font-size: 0.8em">CC BY-NC-ND</a> FQDB 2014-2015 - hosted by <a href="https://github.com/pages">Github Pages</a></span>
 	<span class="right_footer"><a href="about.html">about</a></span>
 	</div>
 </footer>
