--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script language="javascript" src="email.js"></script>
 	<title>Felix de Boer</title>
-	
 </head>
 <body>
 	<div id="header"></div>
@@ -21,14 +20,16 @@
 	</script>
 	
 	<section id="main">
+	<div style="background-color: #bebebe; color: black; width: 100%; padding: 1em; font-weight: bold;">I have rewritten the stylesheet recently, there might be some some bugs that cause readability issues.</div>
 	<h1 style="margin-bottom: 0.5em">Hello</h1>
 	<p>
 	My name is Felix. I am planning to graduate with my bachelor's degree in Applied Physics at <span title="Delft University of Technology"><a href="http://www.tudelft.nl">TU Delft</a><span> this year. Besides natural science, in my spare time I also work with electronics and practice programming.
 	</p>
+	<div id="teasers">
 	<h2>Featured posts</h2>
-	<div class="teaser" style="padding-top:1em;">
-		<div class="teaser_tile"><span style="font-weight:bold"><a href="page/dagvandebouw_2015.html">Bezoek TNW-zuid - Dag van de bouw</a></span><br><span class="teaser_text">
-	 </span><span class="teaser_text">[Dutch] Op de Dag van de bouw was het mogelijk om het nieuwste nog in aanbouw zijnde high-tech vastgoed van de TU Delft te bezichtigen. </span>
+	<div class="teaser_tile"><span style="font-weight:bold"><a href="page/dagvandebouw_2015.html">Bezoek TNW-zuid - Dag van de bouw</a></span><br><span class="teaser_text">
+	</span><span class="teaser_text">[Dutch] Op de Dag van de bouw was het mogelijk om het nieuwste nog in aanbouw zijnde high-tech vastgoed van de TU Delft te bezichtigen. </span>
+	<img src="res/photo/dagvandebouw_2015/IMG_20150613_131444.jpg">
 	</div>
 	<div class="teaser_tile"><span style="font-weight:bold"><a href="page/1euro_usb_hub_review.html">&euro;1 USB hub review</a></span><br><span class="teaser_text">
 	 </span><span class="teaser_text">For just &euro;1 I got myself a USB hub from China. Is it worthless or worth every cent? Teardown also included.</span>
@@ -36,31 +37,23 @@
 	<div class="teaser_tile"><span style="font-weight:bold"><a href="page/cm11_theme_for_huawei_emui_30.html">Building a CM11 theme for EMUI 3.0</a></span><br><span class="teaser_text">
 	Project homepage where updates about the project will be posted as well as documentation and releases.<br></span>
 	</div>
-	<div class="teaser_tile" id="teaser_tile_last"><span style="font-weight:bold"><a href="page/emui_3.0_vs_miui_v6.html">EMUI 3.0 vs. MIUI V6</a></span><br><span class="teaser_text">
+	<div class="teaser_tile" ><span style="font-weight:bold"><a href="page/emui_3.0_vs_miui_v6.html">EMUI 3.0 vs. MIUI V6</a></span><br><span class="teaser_text">
 	A short history of Huawei's way of skinning Android and a gallery full of comparison screenshots with Xiaomi's MIUI.</span>
 	</div>
 	</div>
-	<script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.5.0/slick.min.js"></script>
 	<script type="text/javascript">
-    $(document).ready(function(){
-      $('.teaser').slick({
-        arrows:true,
-		slidesToShow: 2,
-		slidesToScroll: 1,
-		speed: 100,
-		dots: true,
-		infinite: false,
-		adaptiveHeigh: false,
-		responsive: [
-		{
-		breakpoint: 480,
-		settings: "unslick"
-		}
-			]
-      });
-    });
+	 function hoverTiles(){
+		 var tiles = $('#teaser_tile');
+			 tiles.hover(function(){
+			 tiles.removeClass('active_tile');
+			 $(this).addClass('active_tile');
+			 })
+		 }
+		 
+	$(document).ready(function() {
+		 hoverTiles();
+	})
 	</script>
-	
 	<h2>Projects</h2>
 	<p>
 	<ul>
@@ -73,14 +66,7 @@
 	<img src="res/photo/TNW_flickr.jpg" style="margin-top: 1em" /></p>
 	<span class="small_description"><i>Applied Sciences building in Delft</i>. Photo by ADD Photography. <a href="https://www.flickr.com/photos/jvanroyen/3272813720/in/photolist-aYGa7-hh2DWv-5Zd2uL-6ykA6R-hegtA1-hegwoL">Flickr</a>/<a href="https://creativecommons.org/licenses/by-nc-sa/2.0/">CC</a></span>
 	</section>
-			
-	<div id="twitter_widget"></div>
-	<script type="text/javascript" language="javascript">
-	$(document).ready(function() {
-		$('#twitter_widget').load('twitter_widget.html');
-	});
-	</script>
-	
+
 	<div id="footer"></div>
 	<script type="text/javascript" language="javascript">
    $(document).ready(function() {
