Images added to teaser tiles

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	</script>
 	
 	<section id="main">
-	<div style="background-color: #bebebe; color: black; width: 100%; padding: 1em; font-weight: bold;">I have rewritten the stylesheet recently, there might be some some bugs that cause readability issues.</div>
+	<div style="background-color: #bebebe; color: black; padding: 1em; font-weight: bold;">I have rewritten the stylesheet recently, there might be some some bugs that cause readability issues.</div>
 	<h1 style="margin-bottom: 0.5em">Hello</h1>
 	<p>
 	My name is Felix. I am planning to graduate with my bachelor's degree in Applied Physics at <span title="Delft University of Technology"><a href="http://www.tudelft.nl">TU Delft</a><span> this year. Besides natural science, in my spare time I also work with electronics and practice programming.
@@ -28,17 +28,20 @@
 	<div id="teasers">
 	<h2>Featured posts</h2>
 	<div class="teaser_tile"><span style="font-weight:bold"><a href="page/dagvandebouw_2015.html">Bezoek TNW-zuid - Dag van de bouw</a></span><br><span class="teaser_text">
-	</span><span class="teaser_text">[Dutch] Op de Dag van de bouw was het mogelijk om het nieuwste nog in aanbouw zijnde high-tech vastgoed van de TU Delft te bezichtigen. </span>
-	<img src="res/photo/dagvandebouw_2015/IMG_20150613_131444.jpg">
+	</span><span class="teaser_text">[Dutch] Op de Dag van de bouw was het mogelijk om het nieuwste nog in aanbouw zijnde high-tech vastgoed van de TU Delft te bezichtigen.</span>
+	<div class="img_wrapper"><img src="res/photo/dagvandebouw_2015/IMG_20150613_131444.jpg"></div>
 	</div>
 	<div class="teaser_tile"><span style="font-weight:bold"><a href="page/1euro_usb_hub_review.html">&euro;1 USB hub review</a></span><br><span class="teaser_text">
 	 </span><span class="teaser_text">For just &euro;1 I got myself a USB hub from China. Is it worthless or worth every cent? Teardown also included.</span>
+	 <img src="res/photo/usb_hub/aliexpress.PNG">
 	</div>
 	<div class="teaser_tile"><span style="font-weight:bold"><a href="page/cm11_theme_for_huawei_emui_30.html">Building a CM11 theme for EMUI 3.0</a></span><br><span class="teaser_text">
 	Project homepage where updates about the project will be posted as well as documentation and releases.<br></span>
+	<img src="res/photo/emui_theming/Picture05.png">
 	</div>
 	<div class="teaser_tile" ><span style="font-weight:bold"><a href="page/emui_3.0_vs_miui_v6.html">EMUI 3.0 vs. MIUI V6</a></span><br><span class="teaser_text">
 	A short history of Huawei's way of skinning Android and a gallery full of comparison screenshots with Xiaomi's MIUI.</span>
+	<img src="http://static.tweakers.net/ext/f/XcKPbq2o2ZdFWmNl8A0dQonL/full.jpg">
 	</div>
 	</div>
 	<script type="text/javascript">
