--- a/footer.html
+++ b/footer.html
@@ -1,5 +1,5 @@
 <footer>
-	<span class="left_footer"><a href="http://creativecommons.org/licenses/by-nc-nd/4.0/legalcode" style="font-size: 0.8em">CC BY-NC-ND</a> FQDB 2014-2015 - hosted by <a href="https://github.com/pages">Github Pages</a></span>
+	<span class="left_footer"><a href="http://creativecommons.org/licenses/by-nc-nd/4.0/legalcode" style="font-size: 0.8em">CC</a> FQDB 2014-2015<span id="hosted_by"> - hosted by <a href="https://github.com/pages">Github Pages</a></span></span>
 	<span class="right_footer"><a href="about.html">about</a></span>
 	</div>
 </footer>
