--- a/index.html
+++ b/index.html
@@ -9,6 +9,28 @@
 	<link rel="shortcut icon" type="image/ico" href="favicon.ico" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script language="javascript" src="email.js"></script>
+	
+	<link rel="apple-touch-icon-precomposed" sizes="57x57" href="apple-touch-icon-57x57.png" />
+	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="apple-touch-icon-114x114.png" />
+	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="apple-touch-icon-72x72.png" />
+	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="apple-touch-icon-144x144.png" />
+	<link rel="apple-touch-icon-precomposed" sizes="60x60" href="apple-touch-icon-60x60.png" />
+	<link rel="apple-touch-icon-precomposed" sizes="120x120" href="apple-touch-icon-120x120.png" />
+	<link rel="apple-touch-icon-precomposed" sizes="76x76" href="apple-touch-icon-76x76.png" />
+	<link rel="apple-touch-icon-precomposed" sizes="152x152" href="apple-touch-icon-152x152.png" />
+	<link rel="icon" type="image/png" href="favicon-196x196.png" sizes="196x196" />
+	<link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96" />
+	<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
+	<link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
+	<link rel="icon" type="image/png" href="favicon-128.png" sizes="128x128" />
+	<meta name="application-name" content="&nbsp;"/>
+	<meta name="msapplication-TileColor" content="#FFFFFF" />
+	<meta name="msapplication-TileImage" content="mstile-144x144.png" />
+	<meta name="msapplication-square70x70logo" content="mstile-70x70.png" />
+	<meta name="msapplication-square150x150logo" content="mstile-150x150.png" />
+	<meta name="msapplication-wide310x150logo" content="mstile-310x150.png" />
+	<meta name="msapplication-square310x310logo" content="mstile-310x310.png" />
+	
 	<title>Felix de Boer</title>
 </head>
 <body>
@@ -20,29 +42,28 @@
 	</script>
 	
 	<section id="main">
-	<div style="background-color: #bebebe; color: black; padding: 1em; font-weight: bold;">I have rewritten the stylesheet recently, there might be some some bugs that cause readability issues.</div>
 	<h1 style="margin-bottom: 0.5em">Hello</h1>
 	<p>
 	My name is Felix. I am planning to graduate with my bachelor's degree in Applied Physics at <span title="Delft University of Technology"><a href="http://www.tudelft.nl">TU Delft</a><span> this year. Besides natural science, in my spare time I also work with electronics and practice programming.
 	</p>
 	<div id="teasers">
 	<h2>Featured posts</h2>
-	<div class="teaser_tile"><span style="font-weight:bold"><a href="page/dagvandebouw_2015.html">Bezoek TNW-zuid - Dag van de bouw</a></span><br><span class="teaser_text">
+	<a href="page/dagvandebouw_2015.html"><div class="teaser_tile"><span class="teaser_title">Bezoek TNW-zuid - Dag van de bouw</span><br><span class="teaser_text">
 	</span><span class="teaser_text">[Dutch] Op de Dag van de bouw was het mogelijk om het nieuwste nog in aanbouw zijnde high-tech vastgoed van de TU Delft te bezichtigen.</span>
 	<div class="img_wrapper"><img src="res/photo/dagvandebouw_2015/IMG_20150613_131444.jpg"></div>
-	</div>
-	<div class="teaser_tile"><span style="font-weight:bold"><a href="page/1euro_usb_hub_review.html">&euro;1 USB hub review</a></span><br><span class="teaser_text">
+	</div></a>
+	<a href="page/1euro_usb_hub_review.html"><div class="teaser_tile"><span class="teaser_title">&euro;1 USB hub review</span><br><span class="teaser_text">
 	 </span><span class="teaser_text">For just &euro;1 I got myself a USB hub from China. Is it worthless or worth every cent? Teardown also included.</span>
 	 <img src="res/photo/usb_hub/aliexpress.PNG">
-	</div>
-	<div class="teaser_tile"><span style="font-weight:bold"><a href="page/cm11_theme_for_huawei_emui_30.html">Building a CM11 theme for EMUI 3.0</a></span><br><span class="teaser_text">
+	</div></a>
+	<a href="page/cm11_theme_for_huawei_emui_30.html"><div class="teaser_tile"><span class="teaser_title">Building a CM11 theme for EMUI 3.0</span><br><span class="teaser_text">
 	Project homepage where updates about the project will be posted as well as documentation and releases.<br></span>
 	<img src="res/photo/emui_theming/Picture05.png">
-	</div>
-	<div class="teaser_tile" ><span style="font-weight:bold"><a href="page/emui_3.0_vs_miui_v6.html">EMUI 3.0 vs. MIUI V6</a></span><br><span class="teaser_text">
+	</div></a>
+	<a href="page/emui_3.0_vs_miui_v6.html"><div class="teaser_tile" ><span class="teaser_title">EMUI 3.0 vs. MIUI V6</span><br><span class="teaser_text">
 	A short history of Huawei's way of skinning Android and a gallery full of comparison screenshots with Xiaomi's MIUI.</span>
 	<img src="http://static.tweakers.net/ext/f/XcKPbq2o2ZdFWmNl8A0dQonL/full.jpg">
-	</div>
+	</div></a>
 	</div>
 	<script type="text/javascript">
 	 function hoverTiles(){
@@ -57,7 +78,7 @@
 		 hoverTiles();
 	})
 	</script>
-	<h2>Projects</h2>
+	<h2>Research experience</h2>
 	<p>
 	<ul>
 	<li>Determining doping type of silicon wafer using Schottky barrier properties</li>
