Fixed responsive menu for V3

--- a/header.html
+++ b/header.html
@@ -23,7 +23,7 @@
 	
 	<nav>
 	<span id="logo"><a style="color: #000000"; href="/index.html">FQDB</a></span>
-		<a href="#" id="menu-icon"></a>
+		<a href="#" id="menu-icon">MENU</a>
 		<ul>
 			<!-- <li><a href="resume.html">Resume</a></li> -->
 			<li><a href="https://fqdb.github.io/contact.html">Contact</a></li>
