Fixed layout bug

--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
 		<li>Responsive caroussels: <a href="http://kenwheeler.github.io/slick/">slick</a>
 	</ul>
 	<h3>Notes</h3>
-	<p>Source is available on <a href="https://github.com/fqdb/fqdb.github.io">GitHub</a> under Creative Commons Attribution-NonCommercial-NoDerivatives licence. But it's better to take something without 4 responsive breakpoints and 3 stylesheets as a starting point.
+	<p>Source is available on <a href="https://github.com/fqdb/fqdb.github.io">GitHub</a> under Creative Commons Attribution-NonCommercial-NoDerivatives licence.
 
 </section>
 	
