--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link type="text/css" rel="stylesheet" href="fonts.css"/>
 	<link rel="shortcut icon" type="image/ico" href="favicon.ico" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="keywords" content="Felix de Boer,Felix,De Boer,personal,homepage,website,personal website,resume,CV,portfolio">
 	<script language="javascript" src="email.js"></script>
 	
 	<link rel="apple-touch-icon-precomposed" sizes="57x57" href="apple-touch-icon-57x57.png" />
