--- a/about.html
+++ b/about.html
@@ -18,17 +18,19 @@
 	</script>
 	
 <section id="main">
-	<h2>Sources and credits</h2>
-	<h3>Sources</h3>
+	<h1>About</h1>
+	<h2>Sources</h2>
+	<p>
 	<ul id="credits_ref">
-		<li><a href="http://www.twelveskip.com/resources/icons/1091/boxxed-flat-social-media-icons">Boxxed Flat Social Media Icons</a></li>
+		<!-- <li><a href="http://www.twelveskip.com/resources/icons/1091/boxxed-flat-social-media-icons">Boxxed Flat Social Media Icons</a></li> -->
 		<li><a href="http://www.bronze-age.com/nospam/">Coding email links to avoid spam</a>
 		<li>Logo font: <a href="http://freakfonts.com/">FrutigerNext LT</a></li>
-		<li>Title font: <a href="https://www.google.com/fonts/">Old Standard TT</a></li>
-		<li>Paragraph font: <a href="https://www.google.com/fonts/">Open Sans 600</a></li>
-		<li>Responsive caroussels: <a href="http://kenwheeler.github.io/slick/">slick</a>
+		<li>Main font: <a href="https://www.google.com/fonts/">Asap</a></li>
+		<li>Responsive caroussels/slideshows: <a href="http://kenwheeler.github.io/slick/">slick</a>
 	</ul>
-	<h3>Notes</h3>
+	Source for images is provided near the respective images.
+	</p>
+	<h2>Licence</h2>
 	<p>Source is available on <a href="https://github.com/fqdb/fqdb.github.io">GitHub</a> under Creative Commons Attribution-NonCommercial-NoDerivatives licence.
 
 </section>
