noscript messages and bugfix with gallery lazyload

--- a/about.html
+++ b/about.html
@@ -30,7 +30,19 @@
 	</ul>
 	Source for images is provided near the respective images.
 	</p>
-	<h2>Licence</h2>
+	<h2>JavaScript usage</h2>
+	<p>
+	If you want to know where JavaScript is used on this website, see the list below. If you're still paranoid about it, feel free to <a href="#Licence">check the source code</a>.
+	</p>
+	<p>
+	<ul id="credits_ref">
+		<li>To insert the header and footer on each page without using server-side scripting</li>
+		<li>For StatCounter. I deliberately chose StatCounter over Google to avoid giving Google another place to follow you. But you may suggest me a better alternative (showing countries and visitor numbers daily).</li>
+		<li>For Slick slideshows.</li>
+		<li>To pretect e-mail links against spam.</li>
+	</ul>
+	</p>
+	<h2 id="Licence">Licence</h2>
 	<p>Source is available on <a href="https://github.com/fqdb/fqdb.github.io">GitHub</a> under Creative Commons Attribution-NonCommercial-NoDerivatives licence.
 
 </section>
