--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 	</script>
 	
 	<section id="main">
+	<noscript><div style="background: #cc0000; padding: 1em; font-weight: bold; color: white;">JavaScript is not enabled or supported by your browser. It probably won't hurt you to have it turned it on for this website. Click <a href="about.html">here</a> to see where and why JavaScript is used on this website.</div></noscript>
 	<h1 style="margin-bottom: 0.5em">Hello</h1>
 	<p>
 	My name is Felix. I am planning to graduate with my bachelor's degree in Applied Physics at <span title="Delft University of Technology"><a href="http://www.tudelft.nl">TU Delft</a><span> this year. Besides natural science, in my spare time I also work with electronics and practice programming.
