Split EMUI theme page

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 	<br>
 	<a href="page/dagvandebouw_2015.html"><div class="teaser_tile"><span class="teaser_title">Bezoek TNW-zuid - Dag van de bouw</span><br><span class="teaser_text">
 	</span><span class="teaser_text">[Dutch] Op de Dag van de bouw was het mogelijk om het nieuwste nog in aanbouw zijnde high-tech vastgoed van de TU Delft te bezichtigen.</span>
-	<div class="img_wrapper"><img src="res/photo/dagvandebouw_2015/IMG_20150613_131444.jpg"></div>
+	<img src="res/photo/dagvandebouw_2015/IMG_20150613_131444.jpg">
 	</div></a>
 	<a href="page/1euro_usb_hub_review.html"><div class="teaser_tile"><span class="teaser_title">&euro;1 USB hub review</span><br><span class="teaser_text">
 	 </span><span class="teaser_text">For just &euro;1 I got myself a USB hub from China. Is it worthless or worth every cent? Teardown also included.</span>
@@ -68,19 +68,7 @@
 	<img src="http://static.tweakers.net/ext/f/XcKPbq2o2ZdFWmNl8A0dQonL/full.jpg">
 	</div></a>
 	</div>
-	<script type="text/javascript">
-	 function hoverTiles(){
-		 var tiles = $('#teaser_tile');
-			 tiles.hover(function(){
-			 tiles.removeClass('active_tile');
-			 $(this).addClass('active_tile');
-			 })
-		 }
-		 
-	$(document).ready(function() {
-		 hoverTiles();
-	})
-	</script>
+
 	<h2>Research experience</h2>
 	<p>
 	<ul>
