--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
 	<div id="teasers">
 	<h2>Featured posts</h2>
 	<br>
+	<a href="page/cm11_theme_for_huawei_emui_30.html"><div class="teaser_tile"><span class="teaser_title">CM11 theme for EMUI 3.0</span><br><span class="teaser_text">
+	The theme is currently in Beta state, but includes themed Settings and SystemUI already.<br></span>
+	<div class="img_wrapper"><img src="res/photo/emui_theming/Picture05.png"></div>
+	</div></a>
 	<a href="page/dagvandebouw_2015.html"><div class="teaser_tile"><span class="teaser_title">Bezoek TNW-zuid - Dag van de bouw</span><br><span class="teaser_text">
 	</span><span class="teaser_text">[Dutch] Op de Dag van de bouw was het mogelijk om het nieuwste nog in aanbouw zijnde high-tech vastgoed van de TU Delft te bezichtigen.</span>
 	<div class="img_wrapper"><img src="res/photo/dagvandebouw_2015/IMG_20150613_131444.jpg"></div>
@@ -58,10 +62,6 @@
 	<a href="page/1euro_usb_hub_review.html"><div class="teaser_tile"><span class="teaser_title">&euro;1 USB hub review</span><br><span class="teaser_text">
 	 </span><span class="teaser_text">For just &euro;1 I got myself a USB hub from China. Is it worthless or worth every cent? Teardown also included.</span>
 	<div class="img_wrapper"><img src="res/photo/usb_hub/aliexpress.PNG"></div>
-	</div></a>
-	<a href="page/cm11_theme_for_huawei_emui_30.html"><div class="teaser_tile"><span class="teaser_title">Building a CM11 theme for EMUI 3.0</span><br><span class="teaser_text">
-	Project homepage where updates about the project will be posted as well as documentation and releases.<br></span>
-	<div class="img_wrapper"><img src="res/photo/emui_theming/Picture05.png"></div>
 	</div></a>
 	<a href="page/emui_3.0_vs_miui_v6.html"><div class="teaser_tile" ><span class="teaser_title">EMUI 3.0 vs. MIUI V6</span><br><span class="teaser_text">
 	A short history of Huawei's way of skinning Android and a gallery full of comparison screenshots with Xiaomi's MIUI.</span>
