About me and html5 video

--- a/header.html
+++ b/header.html
@@ -25,9 +25,9 @@
 	<span id="logo"><a style="color: #000000"; href="/index.html">FQDB</a></span>
 		<a href="#" id="menu-icon">MENU</a>
 		<ul>
-			<!-- <li><a href="resume.html">Resume</a></li> -->
-			<li><a href="https://fqdb.github.io/contact.html">Contact</a></li>
+			<li><a href="/contact.html">Contact</a></li>
 			<li><a href="https://twitter.com/fqdeb" target="_blank">Tweets</a></li>
+			<li><a href="/about-me.html">About me</a></li>
 		</ul>
 	</nav>
 	<script>
