--- a/about.html
+++ b/about.html
@@ -27,6 +27,7 @@
 		<li>Logo font: <a href="http://freakfonts.com/">FrutigerNext LT</a></li>
 		<li>Main font: <a href="https://www.google.com/fonts/">Asap</a></li>
 		<li>Responsive caroussels/slideshows: <a href="http://kenwheeler.github.io/slick/">slick</a>
+		<li>Menu icon: <a href="https://www.google.com/design/icons/#ic_list">Google Design</a>
 	</ul>
 	Source for images is provided near the respective images.
 	</p>
