--- a/header.html
+++ b/header.html
@@ -23,7 +23,7 @@
 	
 	<nav>
 	<span id="logo"><a style="color: #000000"; href="/index.html">FQDB</a></span>
-		<a href="#" id="menu-icon">MENU</a>
+		<a href="#" id="menu-icon"><img src="res/ic_list_black_48dp.png"></a>
 		<ul>
 			<li><a href="/contact.html">Contact</a></li>
 			<li><a href="https://twitter.com/fqdeb" target="_blank">Tweets</a></li>
