--- a/about-me.html
+++ b/about-me.html
@@ -21,15 +21,16 @@
 	<h1>About me</h1>
 <!-- 	<div style="background: #dddddd; width: auto; padding: 0.5em;">Download <a href="/curriculum-vitae.html">curriculum vitae</a></div> -->
 	
-	<p>In 2011 I started studying Architecture at Delft University of Technology. Throughout the year I found out that I wasn't too fond of drawing and gluing foam scale models together, even though I liked how creativity was channeled into practical and esthetically pleasing objects. Therefore I decided to abandon architecture for the next year. The next year I would start applied physics.
+	<p>In 2011 I started studying Architecture at Delft University of Technology. Throughout the year I found out that I wasn't too fond of drawing and gluing foam scale models together, even though I liked how creativity was channelled into practical and esthetically pleasing objects. Therefore I decided to abandon architecture for the next year. The next year I would start applied physics.
 	</p>
 	<p>This turned out to be one of the best big decisions I have made so far. The applied physics program satisfies my theoretical curiosity, allows me to work with specialized scientific equipment and is pretty challenging. I've been mostly drawn to microscopy and nanotechnology, with some side trips to optics, quantum physics and chemistry.
 	</p>
+	<p>From september 2015 on, I will be following the <a href="http://www.tudelft.nl/en/study/master-of-science/master-programmes/applied-physics/">Applied Physics Master</a> program at TU Delft.</p>
 	<p>I can also do some programming (MATLAB, C++, Python), make simple websites (like the one you're looking at) and do graphics design (Photoshop, Illustrator) and document markup/publishing (<span class="texhtml" style="font-family: 'CMU Serif', cmr10, LMRoman10-Regular, 'Nimbus Roman No9 L', 'Times New Roman', Times, serif;">L<span style="text-transform: uppercase; font-size: 70%; margin-left: -0.36em; vertical-align: 0.3em; line-height: 0; margin-right: -0.15em;">a</span>T<span style="text-transform: uppercase; margin-left: -0.1667em; vertical-align: -0.5ex; line-height: 0; margin-right: -0.125em;">e</span>X</span>, InDesign, Word).
-	<p>
-	At the moment I'm very busy with my bachelor's thesis, but from September 2015 I will be available for extracurricular work.
 	</p>
 	<p><a href="http://imgs.xkcd.com/comics/purity.png"><img src="http://imgs.xkcd.com/comics/purity.png"></a><span class="small_description">Physics, fundamental enough to know why it works, practical enough to built stuff with it.<br><a href="http://xkcd.com/435/">xkcd 435</a></span></p>
+	
+	<p style="opacity: 0;">tags: Felix de Boer, TU Delft, personal website, homepage, F.Q. de Boer, Heerenveen</p>
 	
 	
 </section>
