--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 	<ul>
 	<li>Determining doping type of silicon wafer using Schottky barrier properties</li>
 	<li>Prototyping a 3D laser rig</li>
-	<li>Bachelor thesis: Observation of SEI layer formation in lithium-silicon batteries </li>
+	<li>Bachelor thesis: Failure mechanisms in lithium silicon batteries </li>
 	</ul>
 	</p>
 	<p>
