Added new page to index

--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
 	<div id="teasers">
 	<h2>Featured posts</h2>
 	<br>
+	<a href="page/smartphone-cpu-cooler.html"><div class="teaser_tile"><span class="teaser_title">CPU cooler for your phone</span><br><span class="teaser_text">
+	</span><span class="teaser_text">If you own a Snapdragon 810 device or other hot phone, click here to find out how to cool things down properly.</span>
+	<div class="img_wrapper"><img src="res/photo/phone_cooler/1917_medium.jpg"></div>
+	</div></a>
 	<a href="page/cm11_theme_for_huawei_emui_30.html"><div class="teaser_tile"><span class="teaser_title">CM11 theme for EMUI 3.0</span><br><span class="teaser_text">
 	The theme is currently in Beta state, but includes themed Settings and SystemUI already.<br></span>
 	<div class="img_wrapper"><img src="res/photo/teaser_01.png"></div>
@@ -58,10 +62,6 @@
 	<a href="page/how-to-make-an-emui-30-theme.html"><div class="teaser_tile"><span class="teaser_title">How to make an EMUI 3.0 theme</span><br><span class="teaser_text">
 	 </span><span class="teaser_text">Everything on making themes for recent Huawei/Honor devices. The guide is still a work in progress.</span>
 	<div class="img_wrapper"><img src="res/photo/emui_theming/Picture05.png"></div>
-	</div></a>
-	<a href="page/dagvandebouw_2015.html"><div class="teaser_tile"><span class="teaser_title">Bezoek TNW-zuid - Dag van de bouw</span><br><span class="teaser_text">
-	</span><span class="teaser_text">[Dutch] Op de Dag van de bouw was het mogelijk om het nieuwste nog in aanbouw zijnde high-tech vastgoed van de TU Delft te bezichtigen.</span>
-	<div class="img_wrapper"><img src="res/photo/dagvandebouw_2015/IMG_20150613_131444.jpg"></div>
 	</div></a>
 	<a href="page/emui_3.0_vs_miui_v6.html"><div class="teaser_tile" ><span class="teaser_title">EMUI 3.0 vs. MIUI V6</span><br><span class="teaser_text">
 	A short history of Huawei's way of skinning Android and a gallery full of comparison screenshots with Xiaomi's MIUI.</span>
