--- a/index.html
+++ b/index.html
@@ -48,30 +48,32 @@
 	<p>
 	My name is Felix. I am planning to graduate with my bachelor's degree in Applied Physics at <span title="Delft University of Technology"><a href="http://www.tudelft.nl">TU Delft</a><span> this year. Besides natural science, in my spare time I also work with electronics and practice programming.
 	</p>
-	<div id="teasers">
 	<h2>Featured posts</h2>
-	<br>
+	<div id="teasers">
 	<a href="page/smartphone-cpu-cooler.html"><div class="teaser_tile"><span class="teaser_title">CPU cooler for your phone</span><br><span class="teaser_text">
 	</span><span class="teaser_text">If you own a Snapdragon 810 device or other hot phone, click here to find out how to cool things down properly.</span>
 	<div class="img_wrapper"><img src="res/photo/phone_cooler/1917_medium.jpg"></div>
 	</div></a>
 	<a href="page/cm11_theme_for_huawei_emui_30.html"><div class="teaser_tile"><span class="teaser_title">CM11 theme for EMUI 3.0</span><br><span class="teaser_text">
 	The theme is currently in Beta state, but includes themed Settings and SystemUI already.<br></span>
-	<div class="img_wrapper"><img src="res/photo/teaser_01.png"></div>
+	<div class="img_wrapper"><img src="res/photo/index/teaser_01.png"></div>
 	</div></a>
 	<a href="page/how-to-make-an-emui-30-theme.html"><div class="teaser_tile"><span class="teaser_title">How to make an EMUI 3.0 theme</span><br><span class="teaser_text">
 	 </span><span class="teaser_text">Everything on making themes for recent Huawei/Honor devices. The guide is still a work in progress.</span>
-	<div class="img_wrapper"><img src="res/photo/emui_theming/Picture05.png"></div>
+	<div class="img_wrapper"><img src="res/photo/index/theming_preview.png"></div>
 	</div></a>
 	<a href="page/emui_3.0_vs_miui_v6.html"><div class="teaser_tile" ><span class="teaser_title">EMUI 3.0 vs. MIUI V6</span><br><span class="teaser_text">
 	A short history of Huawei's way of skinning Android and a gallery full of comparison screenshots with Xiaomi's MIUI.</span>
 	<div class="img_wrapper"><img src="http://static.tweakers.net/ext/f/XcKPbq2o2ZdFWmNl8A0dQonL/full.jpg"></div>
 	</div></a>
 	</div>
-
+	
+	<h2>Science</h2>
+	<p>Within physics I'm specifically interested in nanoscience, microscopy, energy storage technology, and application of physics in commercial devices.</p>
 	<p>
-	<img src="res/photo/TNW_flickr.jpg" style="margin-top: 1em" /></p>
-	<span class="small_description"><i>Applied Sciences building in Delft</i>. Photo by ADD Photography. <a href="https://www.flickr.com/photos/jvanroyen/3272813720/in/photolist-aYGa7-hh2DWv-5Zd2uL-6ykA6R-hegtA1-hegwoL">Flickr</a>/<a href="https://creativecommons.org/licenses/by-nc-sa/2.0/">CC</a></span>
+	<img src="res/photo/index/silicon_TEM_FEI.jpg" style="margin-top: 1em" />
+	<span class="small_description">TEM sample observation in progress.</span>
+	</p>
 	</section>
 
 	<div id="footer"></div>
