--- a/header.html
+++ b/header.html
@@ -28,6 +28,7 @@
 			<li><a href="/contact.html">Contact</a></li>
 			<li><a href="https://twitter.com/fqdeb" target="_blank">Tweets</a></li>
 			<li><a href="/about-me.html">About me</a></li>
+			<li><a href="/resume.html">Resume</a></li>
 		</ul>
 	</nav>
 	<script>
