--- a/resume.html
+++ b/resume.html
@@ -26,7 +26,7 @@
 	<h2>Education</h2>
 	<h3>Bachelor Applied Physics, Delft University of Technology</h3>
 	<p><i>2012-2015</i></br>
-	Bachelor thesis: <a href="http://repository.tudelft.nl">Failure mechanisms in lithium silicon batteries</a>
+	Bachelor thesis: <a href="http://repository.tudelft.nl/view/ir/uuid%3A49963633-ab07-4ca2-a87e-b85d08039880/">Failure mechanisms in lithium silicon batteries</a>
 	</p>
 	
 </section>
