--- a/resume.html
+++ b/resume.html
@@ -24,11 +24,28 @@
 	<h3>Tocano</h3>
 	<p>At Delft based start-up <a href="http://www.tocano.nl/">Tocano</a>, I programmed a precise 3D positioning rig and executed lab experiments involving a class 4 infrared laser.</p>
 	<h2>Education</h2>
+	<h3>Master Applied Physics, Delft University of Technology</h3>
+	<p><i>2015-2017 (exp.)</i></br>
+	
+	</p>
 	<h3>Bachelor Applied Physics, Delft University of Technology</h3>
 	<p><i>2012-2015</i></br>
 	Bachelor thesis: <a href="http://repository.tudelft.nl/view/ir/uuid%3A49963633-ab07-4ca2-a87e-b85d08039880/">Failure mechanisms in lithium silicon batteries</a>
 	</p>
+	<p>
+	<a href="http://repository.tudelft.nl/view/ir/uuid%3A49963633-ab07-4ca2-a87e-b85d08039880/"><img src="res/photo/resume/cover.jpg" style="max-width: 50%"></a>
+	</p>
 	
+	<h2>Some subjects I'm experienced in</h2>
+	<ul>
+	<li>R & D</li>
+	<li>Data analysis</li>
+	<li>Microscopy</li>
+	<li>MATLAB</li>
+	<li>C++ (Arduino programming)</li>
+	<li>LaTeX</li>
+	<li>Adobe Photoshop, Illustrator</li>
+	</ul>
 </section>
 	
 	<div id="footer"></div>
