Weird Sony & Archive

--- a/contact.html
+++ b/contact.html
@@ -19,8 +19,11 @@
 	
 	<section id="main">
 	<h1>Contact</h1>
+	<p>Twitter: <a href="https://www.twitter.com/fqdeb/" target="_blank">@FQdeB</a><p>
 	<p>E-mail: <script>mail("fqdeboer","ilevn?l",-2,"")</script></div></p>
 	<p>Telegram: <a href="https://telegram.me/felixdeboer">@FelixDeBoer</a></p>
+	<br/>
+	<br/>
 	</section>
 	
 	<div id="footer"></div>
