--- a/header.html
+++ b/header.html
@@ -26,7 +26,7 @@
 		<a href="#" id="menu-icon"><img src="res/ic_list_black_48dp.png"></a>
 		<ul>
 			
-			<li><a href="https://twitter.com/fqdeb" target="_blank">Tweets</a></li>
+			<li><a href="/page/archive.html">Archive</a></li>
 			<li><a href="/resume.html">Resume</a></li>
 			<li><a href="/contact.html">Contact</a></li>
 			<li><a href="/about-me.html">About me</a></li>
