--- a/index.html
+++ b/index.html
@@ -2,8 +2,6 @@
 <html>
 <head>
 	<script src="jquery-2.1.1.js"></script>
-		<!-- For slideshow -->	<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.5.0/slick.css"/>
-							<link rel="stylesheet" type="text/css" href="slick-theme.css"/>
 	<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
 	<link type="text/css" rel="stylesheet" href="fonts.css"/>
 	<link rel="shortcut icon" type="image/ico" href="favicon.ico" />
@@ -46,13 +44,13 @@
 	<noscript><div style="background: #cc0000; padding: 1em; font-weight: bold; color: white;">JavaScript is not enabled or supported by your browser. It probably won't hurt you to have it turned it on for this website. Click <a href="about.html">here</a> to see where and why JavaScript is used on this website.</div></noscript>
 	<h1 style="margin-bottom: 0.5em">Hello</h1>
 	<p>
-	My name is Felix. I am planning to graduate with my bachelor's degree in Applied Physics at <span title="Delft University of Technology"><a href="http://www.tudelft.nl">TU Delft</a><span> this year. Besides natural science, in my spare time I also work with electronics and practice programming.
+	My name is Felix. I am planning to graduate with my bachelor's degree in Applied Physics at <span title="Delft University of Technology"><a href="http://www.tudelft.nl">TU Delft</a><span> this year. Besides natural science, in my spare time I also work with electronics and practice programming. On this website you can find out a bit about me and some not really related posts about what interests me.
 	</p>
 	<h2>Featured posts</h2>
 	<div id="teasers">
-	<a href="page/smartphone-cpu-cooler.html"><div class="teaser_tile"><span class="teaser_title">CPU cooler for your phone</span><br><span class="teaser_text">
-	</span><span class="teaser_text">If you own a Snapdragon 810 device or other hot phone, click here to find out how to cool things down properly.</span>
-	<div class="img_wrapper"><img src="res/photo/phone_cooler/1917_medium.jpg"></div>
+	<a href="page/sony-devices-you-will-want-now.html"><div class="teaser_tile"><span class="teaser_title">Amazing Sony devices you will want now</span><br><span class="teaser_text">
+	</span><span class="teaser_text">For me, Sony is the coolest consumer electronics company in the world. In this post some examples why.</span>
+	<div class="img_wrapper"><video src="res/photo/weird_sony/BSP60.webm" style="max-width: 100%;"autoplay loop></video></div>
 	</div></a>
 	<a href="page/cm11_theme_for_huawei_emui_30.html"><div class="teaser_tile"><span class="teaser_title">CM11 theme for EMUI 3.0</span><br><span class="teaser_text">
 	The theme is currently in Beta state, but includes themed Settings and SystemUI already.<br></span>
