video controls because mobile blocks autoplay

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 	<div id="teasers">
 	<a href="page/sony-devices-you-will-want-now.html"><div class="teaser_tile"><span class="teaser_title">Amazing Sony devices you will want now</span><br><span class="teaser_text">
 	</span><span class="teaser_text">For me, Sony is the coolest consumer electronics company in the world. In this post some examples why.</span>
-	<div class="img_wrapper"><video src="res/photo/weird_sony/BSP60.webm" style="max-width: 100%;"autoplay loop></video></div>
+	<div class="img_wrapper"><video src="res/photo/weird_sony/BSP60.mp4" style="max-width: 100%;"autoplay loop controls></video></div>
 	</div></a>
 	<a href="page/cm11_theme_for_huawei_emui_30.html"><div class="teaser_tile"><span class="teaser_title">CM11 theme for EMUI 3.0</span><br><span class="teaser_text">
 	The theme is currently in Beta state, but includes themed Settings and SystemUI already.<br></span>
