fqdeboer.net V3 is here

--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html>
 <head>
 	<script src="jquery-2.1.1.js"></script>
-	<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
+	<script language="javascript" src="email.js"></script>
+	<link type="text/css" rel="stylesheet" href="stylesheet_indexv3.css"/>
 	<link type="text/css" rel="stylesheet" href="fonts.css"/>
 	<link rel="shortcut icon" type="image/ico" href="favicon.ico" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="keywords" content="Felix de Boer,Felix,De Boer,personal,homepage,website,personal website,resume,CV,portfolio">
-	<script language="javascript" src="email.js"></script>
-	
 	<link rel="apple-touch-icon-precomposed" sizes="57x57" href="apple-touch-icon-57x57.png" />
 	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="apple-touch-icon-114x114.png" />
 	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="apple-touch-icon-72x72.png" />
@@ -32,70 +31,100 @@
 	
 	<title>Felix de Boer</title>
 </head>
-<body>
-	<div id="header"></div>
-	<script type="text/javascript" language="javascript">
-   $(document).ready(function() {
-		$('#header').load('header.html');
-	});
-	</script>
-	
-	<section id="main">
-	<noscript><div style="background: #cc0000; padding: 1em; font-weight: bold; color: white;">JavaScript is not enabled or supported by your browser. It probably won't hurt you to have it turned it on for this website. Click <a href="about.html">here</a> to see where and why JavaScript is used on this website.</div></noscript>
-	<h1 style="margin-bottom: 0.5em">Hello</h1>
-	<p>
-	My name is Felix. I am planning to graduate with my bachelor's degree in Applied Physics at <span title="Delft University of Technology"><a href="http://www.tudelft.nl">TU Delft</a><span> this year. Besides natural science, in my spare time I also work with electronics and practice programming. On this website you can find out a bit about me and some not really related posts about what interests me.
-	</p>
-	<h2>Featured posts</h2>
-	<div id="teasers">
-	<a href="page/sony-devices-you-will-want-now.html"><div class="teaser_tile"><span class="teaser_title">Amazing Sony devices you will want now</span><br><span class="teaser_text">
-	</span><span class="teaser_text">For me, Sony is the coolest consumer electronics company in the world. In this post some examples why.</span>
-	<div class="img_wrapper"><video src="res/photo/weird_sony/BSP60.mp4" style="max-width: 100%;"autoplay loop controls></video></div>
-	</div></a>
-	<a href="page/cm11_theme_for_huawei_emui_30.html"><div class="teaser_tile"><span class="teaser_title">CM11 theme for EMUI 3.0</span><br><span class="teaser_text">
-	The theme is currently in Beta state, but includes themed Settings and SystemUI already.<br></span>
-	<div class="img_wrapper"><img src="res/photo/index/teaser_01.png"></div>
-	</div></a>
-	<a href="page/how-to-make-an-emui-30-theme.html"><div class="teaser_tile"><span class="teaser_title">How to make an EMUI 3.0 theme</span><br><span class="teaser_text">
-	 </span><span class="teaser_text">Everything on making themes for recent Huawei/Honor devices. The guide is still a work in progress.</span>
-	<div class="img_wrapper"><img src="res/photo/index/theming_preview.png"></div>
-	</div></a>
-	<a href="page/emui_3.0_vs_miui_v6.html"><div class="teaser_tile" ><span class="teaser_title">EMUI 3.0 vs. MIUI V6</span><br><span class="teaser_text">
-	A short history of Huawei's way of skinning Android and a gallery full of comparison screenshots with Xiaomi's MIUI.</span>
-	<div class="img_wrapper"><img src="http://static.tweakers.net/ext/f/XcKPbq2o2ZdFWmNl8A0dQonL/full.jpg"></div>
-	</div></a>
-	</div>
-	
-	<h2>Science</h2>
-	<p>Within physics I'm specifically interested in nanoscience, microscopy, energy storage technology, and application of physics in commercial devices.</p>
-	<p>
-	<img src="res/photo/index/silicon_TEM_FEI.jpg" style="margin-top: 1em" />
-	<span class="small_description">TEM sample observation in progress.</span>
-	</p>
-	</section>
 
-	<div id="footer"></div>
-	<script type="text/javascript" language="javascript">
-   $(document).ready(function() {
-		$('#footer').load('footer.html');
-	});
-	</script>
-	<!-- Start of StatCounter Code for Default Guide -->
-	<script type="text/javascript">
-	var sc_project=10431585; 
-	var sc_invisible=1; 
-	var sc_security="d97b5958"; 
-	var scJsHost = (("https:" == document.location.protocol) ?
-	"https://secure." : "http://www.");
-	document.write("<sc"+"ript type='text/javascript' src='" +
-	scJsHost+
-	"statcounter.com/counter/counter.js'></"+"script>");
-	</script>
-	<noscript><div class="statcounter"><a title="hit counter"
-	href="http://statcounter.com/" target="_blank"><img
-	class="statcounter"
-	src="http://c.statcounter.com/10431585/0/d97b5958/1/"
-	alt="hit counter"></a></div></noscript>
-	<!-- End of StatCounter Code for Default Guide -->
-	</body>
-</html>
+<body>
+<span id="title">
+Felix de Boer
+</span>
+<div id="hline"></div>
+<p style="margin-left: 1.5em;">Welcome to fqdeboer.net v3 beta. Everything should be fully functional albeit with some minor layout bugs.</p>
+<noscript>
+	<div style="background: #cc0000; padding: 1em; font-weight: bold; color: white; max-width: 30em; ">
+	JavaScript is not enabled or supported by your browser. The menu does not work now because it utilizes JavaScript.<br>
+	Here is a basic HTML version of the menu to help you out:
+	<ul>
+		
+		<li><a href="/page/archive.html">Archive</a></li>
+		<li><a href="/resume.html">Resume</a></li>
+		<li><a href="/contact.html">Contact</a></li>
+	</ul>
+	</div>
+</noscript>
+
+<div id="home_menu">
+<a href="#" id="posts_parent"><div>Posts</div></a>
+<a href="#" id="resume_parent"><div>Resume</div></a>
+<a href="#" id="contact_parent"><div>Contact</div></a>
+<!-- <a href="about.html"><div>About</div></a> -->
+<div id="posts_expand" class="expand">
+	<a href="page/sony-devices-you-will-want-now.html"><div class="spotlight"><h3>Amazing Sony devices</h3>
+	Some of the coolest products Sony sells now.<br><br>
+	<div class="img_wrapper"><video src="res/photo/weird_sony/BSP60.mp4" style="max-width: 100%;"autoplay loop controls></video></div>
+	</div></a><a href="page/how-to-make-an-emui-30-theme.html"><div class="spotlight"><h3>How to make an EMUI 3.0 theme</h3>
+	Everything on making themes for recent Huawei/Honor devices. The guide is still a work in progress.
+	<div class="img_wrapper"><img src="res/photo/index/theming_preview.png"></div>
+	</div></a><a href="page/emui_3.0_vs_miui_v6.html"><div class="spotlight"><h3>EMUI 3.0 vs. MIUI V6</h3>
+	A short history of Huawei's way of skinning Android and a gallery full of comparison screenshots with Xiaomi's MIUI.
+	<div class="img_wrapper"><img src="http://static.tweakers.net/ext/f/XcKPbq2o2ZdFWmNl8A0dQonL/full.jpg"></div>
+	</div></a><a href="page/archive.html"><div class="spotlight"><h1 style="vertical-align: center; text-align: center;">more posts</h1>
+	</div></a>
+</div>
+<div id="resume_expand" class="expand">
+	<h1>Resume</h1>
+	<h2>Work experience</h2>
+	<h3>Tocano</h3>
+	<p>At Delft based start-up <a href="http://www.tocano.nl/">Tocano</a>, I programmed a precise 3D positioning rig and executed lab experiments involving a class 4 infrared laser.</p>
+	<h2>Education</h2>
+	<h3>Master Applied Physics, Delft University of Technology</h3>
+	<p><i>2015-2017 (exp.)</i></br></p>
+	<h3>Bachelor Applied Physics, Delft University of Technology</h3>
+	<p><i>2012-2015</i></br>
+	Bachelor thesis: <a href="http://repository.tudelft.nl/view/ir/uuid%3A49963633-ab07-4ca2-a87e-b85d08039880/">Failure mechanisms in lithium silicon batteries</a>
+	</p>
+	<p>
+	<a href="http://repository.tudelft.nl/view/ir/uuid%3A49963633-ab07-4ca2-a87e-b85d08039880/"><img src="res/photo/resume/cover.jpg" style="max-width: 50%"></a>
+	</p>
+	
+	<h2>Some subjects I'm experienced in</h2>
+	<ul>
+	<li>R & D</li>
+	<li>Data analysis</li>
+	<li>Microscopy</li>
+	<li>MATLAB</li>
+	<li>C++ (Arduino programming)</li>
+	<li>LaTeX</li>
+	<li>Adobe Photoshop, Illustrator</li>
+	</ul>
+</div>
+<div id="contact_expand" class="expand">
+	<h1>Contact</h1>
+	<p>Twitter: <a href="https://www.twitter.com/fqdeb/" target="_blank">@FQdeB</a><p>
+	<p>E-mail: <script>mail("fqdeboer","ilevn?l",-2,"")</script></p>
+	<p>Telegram: <a href="https://telegram.me/felixdeboer">@FelixDeBoer</a></p>
+</div>
+</div>
+<footer>
+Felix de Boer 2014-2015 hosted by <a href="https://github.com/pages">Github Pages</a>
+</footer>
+<script>
+$(function(){
+         $('#posts_parent').click(function(){
+               $('.expand').hide();
+			   $('#posts_expand').show();
+			   $('#archive').show();
+        });
+});
+$(function(){
+         $('#contact_parent').click(function(){
+               $('.expand').hide();
+			   $('#contact_expand').show();
+        });
+});
+$(function(){
+         $('#resume_parent').click(function(){
+               $('.expand').hide();
+			   $('#resume_expand').show();
+        });
+});
+</script>
+</body>
