Applied new theme to all /page/s

--- a/header.html
+++ b/header.html
@@ -20,18 +20,11 @@
 	<meta name="msapplication-wide310x150logo" content="mstile-310x150.png" />
 	<meta name="msapplication-square310x310logo" content="mstile-310x310.png" />
 	
+	<link type="text/css" rel="stylesheet" href="../header.css"/>
 	
-	<nav>
-	<span id="logo"><a style="color: #000000"; href="/index.html">FQDB</a></span>
-		<a href="#" id="menu-icon"><img src="res/ic_list_black_48dp.png"></a>
-		<ul>
-			
-			<li><a href="/page/archive.html">Archive</a></li>
-			<li><a href="/resume.html">Resume</a></li>
-			<li><a href="/contact.html">Contact</a></li>
-			<li><a href="/about-me.html">About me</a></li>
-		</ul>
-	</nav>
+	<a title="index" href="/index.html"><nav>
+	<span id="logo">Felix de Boer</a></span>
+	</nav></a>
 	<script>
 		// Hide Header on on scroll down
 		// Made by https://medium.com/@mariusc23/hide-header-on-scroll-down-show-on-scroll-up-67bbaae9a78c
