--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 Felix de Boer
 </span>
 <div id="hline"></div>
-<p style="margin-left: 1.5em;">Welcome to fqdeboer.net v3 beta. Everything should be fully functional albeit with some minor layout bugs.</p>
+<p>Welcome to fqdeboer.net v3 beta. Everything should be fully functional albeit with some minor layout bugs.</p>
 <noscript>
 	<div style="background: #cc0000; padding: 1em; font-weight: bold; color: white; max-width: 30em; ">
 	JavaScript is not enabled or supported by your browser. The menu does not work now because it utilizes JavaScript.<br>
@@ -66,7 +66,7 @@ Felix de Boer
 	</div></a><a href="page/emui_3.0_vs_miui_v6.html"><div class="spotlight"><h3>EMUI 3.0 vs. MIUI V6</h3>
 	A short history of Huawei's way of skinning Android and a gallery full of comparison screenshots with Xiaomi's MIUI.
 	<div class="img_wrapper"><img src="http://static.tweakers.net/ext/f/XcKPbq2o2ZdFWmNl8A0dQonL/full.jpg"></div>
-	</div></a><a href="page/archive.html"><div class="spotlight"><h1 style="vertical-align: center; text-align: center;">more posts</h1>
+	</div></a><a href="page/archive.html" style="margin-bottom: 5em;"><div class="spotlight"><h1 style="vertical-align: center; text-align: center;">more posts</h1>
 	</div></a>
 </div>
 <div id="resume_expand" class="expand">
