Legacy menu fix

--- a/header.html
+++ b/header.html
@@ -22,9 +22,9 @@
 	
 	<link type="text/css" rel="stylesheet" href="../header.css"/>
 	
-	<a title="index" href="/index.html"><nav>
-	<span id="logo">Felix de Boer</a></span>
-	</nav></a>
+	<nav>
+	<a title="index" href="/index.html"><span id="logo">Felix de Boer</span><br><span id="back_home">back to index</span></a>
+	</nav>
 	<script>
 		// Hide Header on on scroll down
 		// Made by https://medium.com/@mariusc23/hide-header-on-scroll-down-show-on-scroll-up-67bbaae9a78c
