--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 	<link rel="shortcut icon" type="image/ico" href="favicon.ico" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="keywords" content="Felix de Boer,Felix,De Boer,personal,homepage,website,personal website,resume,CV,portfolio">
+	<meta name="description" content="Homepage of Felix de Boer" />
+	<meta name="robots" content="noarchive" />
 	<link rel="apple-touch-icon-precomposed" sizes="57x57" href="apple-touch-icon-57x57.png" />
 	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="apple-touch-icon-114x114.png" />
 	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="apple-touch-icon-72x72.png" />
